--- a/style.css
+++ b/style.css
@@ -21,3 +21,123 @@ body {
 */
 
 /* ----- zde zacni psat vlastni css ----- */
+
+
+body {
+    background-color: #f5f5f5;
+}
+
+.zbozi {
+    display: flex;
+    /* font-family: 'Rubik', sans-serif; */
+    font-family: 'Rubik';
+    font-weight: 400;
+    font-size: 14px;
+    width: 670px;
+    height: 440px;
+    margin: 50px auto;
+}
+
+/*---sekce vizual---*/
+
+.vizual {
+    color: white;
+    padding: 30px;
+    background-image: linear-gradient(#06d7c1,#50cc49);
+    position: relative;
+    width: 335px;
+    border-radius: 5% 0 0 5%;
+}
+
+.slogan {
+    margin-top: 30px;
+    font-weight: 500;
+    font-size: 16px;
+}
+
+.cena {
+    font-weight: 500;
+    font-size: 28px;
+}
+
+.zaruka {
+    font-weight: 400;
+    font-size: 12px;
+}
+
+.cenovka {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-end;
+    position: relative;
+    bottom: -220px;
+}
+
+.bota {
+    position: absolute;
+    right: 1px;
+} 
+
+
+/*---sekce detaily---*/
+.detaily {
+    padding: 30px;
+    width: 335px;
+    background-color: white;
+    border-radius: 0 5% 5% 0;
+}
+
+.nazev {
+    font-weight: 500;
+    font-size: 20px;
+    text-transform: uppercase;
+    margin: 0;
+}
+
+.produkt {
+    color: #959595;
+}
+
+.popis {
+    margin-top: 30px;
+    margin-bottom: 30px; 
+}
+
+.parametr {
+    text-transform: uppercase;
+    font-size: 14px;
+    font-weight: 500;
+    border-top: 1px solid #06d7c1;
+    padding-top: 30px;
+}
+
+.velikosti {
+    margin-top: 10px;
+    padding: 0;
+    list-style: 0; 
+}
+
+.velikosti li {
+    display: inline-block;
+    margin: 0 8px 0 8px;
+}
+
+.vybrana {
+    color: #f15f42;
+    border-radius: 50%;
+    border: 1px solid #f15f42;
+}
+/* nevim, jak odsadit ten kruhovy ramecek, aby nebyl nalepeny primo na tom cisle 38 */
+
+.tlacitko {
+    margin-bottom: 30px;
+    position: relative;
+    bottom: -75px;
+    text-decoration: none;
+    text-transform: uppercase;
+    color: white;
+    background-color: #f15f42;
+    border-radius: 10%;
+    padding: 10px 20px;
+}
